kettle-service-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: kettle-service
  name: kettle-service
spec:
  replicas: 1
  selector:
    app: kettle-service
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        app: kettle-service
    spec:
      volumes:
      - emptyDir: {}
        name: volume-#voluid#
      containers:
      - image: registry.dataos.io/guestbook/kettle-service
        imagePullPolicy: Always
        name: kettle-service
        args:
        - /start.sh
        - #username#
        - #userpass#
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /trans
          name: volume-#voluid#
      - image: registry.dataos.io/guestbook/simple-file-uploader
        imagePullPolicy: Always
        name: simple-file-uploader
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /simple-file-uploader/uploads
          name: volume--#voluid#
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
status: {}
