kettle-service-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: kettle-service
  name: kettle-service
spec:
  host: kettle-service.app.dataos.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: kettle-service
status: {}

---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: kettle-service
  name: kettle-file-uploader
spec:
  host: kettle-file-uploader.app.dataos.io
  port:
    targetPort: 8000-tcp
  to:
    kind: Service
    name: kettle-file-uploader
status: {}
